--- a/src/components/questionario/Questionario.module.css
+++ b/src/components/questionario/Questionario.module.css
@@ -1,20 +1,22 @@
 /* Estilos para telas grandes */
 @media (min-width: 1200px) {
-  .questionarioContent {
+  .questionarioContainer{
     grid-column: 1 / 13;
-    font-family: 'Roboto Condensed', sans-serif;
-    display: grid;
+    display: grid;    
+    height: auto;    
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    width: 100%;
-    height: 60rem;
     background-color: #6F2282;
-    padding-bottom: 30rem;
+    /* border: 2px solid rgb(249, 0, 0); */
   }
 
-  .headerContent {
+  .questionarioContent {
     grid-column: 4 / 10;
-    grid-row: 2;
+    /* border:1px solid black; */
+    padding: 2rem;
+    font-family: 'Roboto Condensed', sans-serif;
+  }
+  
+  .headerContent {
     display: flex;
     justify-content: space-between;
     align-content: stretch;
@@ -92,6 +94,9 @@
 
   .boxImages {
     display: flex;
+    background-color: #eee;
+    align-items: center;
+    justify-content: center;
     gap: 1.5rem;
   }
 
@@ -116,8 +121,6 @@
   .question_section {
     margin: 2rem 0;
   }
-
-  .question_count {}
 
   .question_text {
     font-family: 'Roboto Condensed', sans-serif;
@@ -152,8 +155,7 @@
 
   .submit_button {
     margin-top: 20px;
-    font-size: 16px;
-    padding: 10px 20px;
+    font-size: 1rem;
     cursor: pointer;
     align-self: center;
   }
@@ -185,7 +187,6 @@
     background-color: red;
   }
 }
-
 /* Estilos para telas médias */
 @media (max-width: 1200px) and (min-width: 992px) {
   .questionarioContent {
@@ -358,9 +359,6 @@
     background-color: red;
   }
 }
-
-
-
 /* Estilos para telas pequenas */
 @media (max-width: 992px) and (min-width: 768px) {
   .questionarioContent {
@@ -536,10 +534,25 @@
     background-color: red;
   }
 }
-
-
 /* Estilos para tablets e smartphones grandes */
 @media (max-width: 768px) and (min-width: 576px) {
+  .questionarioContainer{
+    grid-column: 1 / 13;
+    display: grid;    
+    height: auto;    
+    grid-template-columns: repeat(12, 1fr);
+    background-color: #6F2282;
+    /* border: 2px solid rgb(249, 0, 0); */
+  }
+  .questionarioContainer{
+    grid-column: 1 / 13;
+    display: grid;    
+    height: auto;    
+    grid-template-columns: repeat(12, 1fr);
+    background-color: #6F2282;
+    /* border: 2px solid rgb(249, 0, 0); */
+  }
+
   .questionarioContent {
     grid-column: 1 / 13;
     font-family: 'Roboto Condensed', sans-serif;
@@ -674,8 +687,8 @@
 
   .submit_button {
     margin-top: 20px;
-    font-size: 16px;
-    padding: 10px 20px;
+    font-size: .9rem;
+    padding: 0;
     cursor: pointer;
     align-self: center;
   }
@@ -714,10 +727,17 @@
     background-color: red;
   }
 }
-
-
 /* Estilos para smartphones pequenos */
 @media (max-width: 576px) {
+  .questionarioContainer{
+    grid-column: 1 / 13;
+    display: grid;    
+    height: auto;    
+    grid-template-columns: repeat(12, 1fr);
+    background-color: #6F2282;
+    /* border: 2px solid rgb(249, 0, 0); */
+  }
+
   .questionarioContent {
     grid-column: 1 / 13;
     font-family: 'Roboto Condensed', sans-serif;
@@ -765,15 +785,16 @@
   }
 
   .flagBox {
-    width: 6rem;
+    display: none;
+    /* width: 6rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: .25rem solid #FCBA5A;
+    border-top: .25rem solid #FCBA5A; */
   }
 
   .flag {
-    display: flex;
+    display: none;
     width: 3rem;
     justify-content: center;
     background-color: #FCBA5A;
@@ -854,8 +875,8 @@
   }
 
   .submit_button {
-    margin-top: 20px;
-    font-size: 16px;
+    margin: 1rem 0 1rem 0;
+    font-size: 1rem;
     padding: 10px 20px;
     cursor: pointer;
     align-self: center;
