--- a/src/components/main/boxes/ImageBox.module.css
+++ b/src/components/main/boxes/ImageBox.module.css
@@ -135,7 +135,7 @@
         flex-direction: column;
     }
     .containerBoxImage img {
-        width:36rem;
+        width:auto;
         
     }
     .footer {
