--- a/src/components/multimidia/VideoPlayer.module.css
+++ b/src/components/multimidia/VideoPlayer.module.css
@@ -233,6 +233,7 @@
         justify-content: center;
         background-color: #FCBA5A;
         border-top-left-radius: 6.25em;
+        padding-bottom: 1rem;
     }
 
     .formaLinha {
@@ -344,6 +345,7 @@
         justify-content: center;
         background-color: #FCBA5A;
         border-top-left-radius: 6.25em;
+        padding-bottom: 1rem;
     }
 
     .formaLinha {
@@ -456,6 +458,7 @@
         justify-content: center;
         background-color: #FCBA5A;
         border-top-left-radius: 6.25em;
+        padding-bottom: 1rem;
     }
 
     .formaLinha {
