--- a/src/components/main/boxes/CardsBox.module.css
+++ b/src/components/main/boxes/CardsBox.module.css
@@ -6,6 +6,7 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         margin-top: 3rem;
+        margin-bottom: 3rem;
     }
 
     .cards {
@@ -16,6 +17,7 @@
         background-color: #6F2282;
         color: #eee;
         text-align: center;
+        padding: 1rem;
     }
 
     .cardItem {
@@ -32,9 +34,10 @@
         background-color: #eeeeee;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 5.3rem 6.8rem;
+        grid-template-rows: auto;
         justify-items: stretch;
-        align-items: center;
+        align-items: start;
+        padding: 1rem;
     }
 
     .cardContent {
@@ -44,16 +47,16 @@
         text-align: center;
         color: #000000;
         display: flex;
-      
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
     }
-    
+
     .cardContent p {
-        flex: 1;
-        justify-self: center;
+        width: 100%;
         padding: 0 5px;
-        /* display: inline-block;
-        text-align: center;
-        width: 36rem; */
+        margin: 0.5rem 0;
+        word-wrap: break-word;
     }
 }
 
@@ -65,6 +68,7 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         margin-top: 3rem;
+        margin-bottom: 3rem;
     }
 
     .cards {
@@ -91,27 +95,28 @@
         background-color: #eeeeee;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 5.3rem 6.8rem;
+        grid-template-rows: auto;
         justify-items: stretch;
-        align-items: center;
+        align-items: start;
     }
 
     .cardContent {
         grid-column: 1 / 4;
-        height: 6rem;
+        height: auto;
         margin: 0;
         text-align: center;
         color: #000000;
         display: flex;
-      
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
     }
 
     .cardContent p {
-        flex: 1;
-        padding: 0 2px;
-        /* display: inline-block;
-        text-align: center;
-        width: 36rem; */
+        width: 100%;
+        padding: 0 5px;
+        margin: 0.5rem 0;
+        word-wrap: break-word;
     }
 }
 
@@ -123,6 +128,7 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         margin-top: 3rem;
+        margin-bottom: 3rem;
     }
 
     .cards {
@@ -133,6 +139,7 @@
         background-color: #6F2282;
         color: #eee;
         text-align: center;
+       
     }
 
     .cardItem {
@@ -149,25 +156,28 @@
         background-color: #eeeeee;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 5.3rem 6.8rem;
+        grid-template-rows: auto;
         justify-items: stretch;
-        align-items: center;
+        align-items: start;
     }
 
     .cardContent {
         grid-column: 1 / 4;
         height: auto;
-        padding: 0 4px;
         margin: 0;
         text-align: center;
         color: #000000;
         display: flex;
-      
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
     }
 
     .cardContent p {
-        flex: 1;
-        padding: 0 2px;
+        width: 100%;
+        padding: 0 5px;
+        margin: 0.5rem 0;
+        word-wrap: break-word;
     }
 }
 
@@ -179,6 +189,7 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         margin-top: 3rem;
+        margin-bottom: 3rem;
     }
 
     .cards {
@@ -189,6 +200,7 @@
         background-color: #6F2282;
         color: #eee;
         text-align: center;
+        
     }
 
     .cardItem {
@@ -205,27 +217,29 @@
         background-color: #eeeeee;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 5.3rem 6.8rem;
+        grid-template-rows: auto;
         justify-items: stretch;
-        align-items: center;
+        align-items: start;
+      
     }
 
     .cardContent {
         grid-column: 1 / 4;
         height: auto;
-        padding: 0 4px;
         margin: 0;
         text-align: center;
         color: #000000;
         display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
     }
 
     .cardContent p {
-        flex: 1;
-        padding:0 2px;
-        /* display: inline-block;
-        text-align: center;
-        width: 36rem; */
+        width: 100%;
+        padding: 0 5px;
+        margin: 0.5rem 0;
+        word-wrap: break-word;
     }
 }
 
@@ -237,6 +251,7 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         margin-top: 3rem;
+        margin-bottom: 3rem;
     }
 
     .cards {
@@ -247,6 +262,7 @@
         background-color: #6F2282;
         color: #eee;
         text-align: center;
+     
     }
 
     .cardItem {
@@ -263,28 +279,29 @@
         background-color: #eeeeee;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 5.3rem);
+        grid-template-rows: auto;
         justify-items: stretch;
-        align-items: center;
+        align-items: start;
         margin: 0 1rem;
+     
     }
 
     .cardContent {
         grid-column: 1 / 13;
-        height: 6rem;
+        height: auto;
         margin: 0;
         text-align: center;
         color: #000000;
         display: flex;
-      
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
     }
 
     .cardContent p {
-        flex: 1;
-        padding: 0 2px;
-        padding-top: 1rem;
-        /* display: inline-block;
-        text-align: center;
-        width: 36rem; */
+        width: 100%;
+        padding: 0 5px;
+        margin: 0.5rem 0;
+        word-wrap: break-word;
     }
 }
